--- a/fly.toml
+++ b/fly.toml
@@ -1,19 +1,29 @@
-# fly.toml app configuration file generated for router-black-snow-1943 on 2024-12-24T18:35:34+01:00
+# fly.toml app configuration file generated for awe-game-router on 2024-12-25T17:32:44+01:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'awe-router'
-primary_region = 'mad'
+app = 'awe-game-router'
+primary_region = 'iad'
 
 [build]
+
+[env]
+AWE_TEMPLATE_APP = 'awe-game-server'
+AWE_TEMPLATE_MACHINE = 'e784459b575708'
+AWE_POOL_APP = 'awe-rooms'
 
 [http_service]
 internal_port = 3000
 force_https = true
-auto_stop_machines = "off"
-auto_start_machines = false
+auto_stop_machines = 'off'
+auto_start_machines = true
 min_machines_running = 0
+processes = ['app']
+
+[[restart]]
+policy = 'on-failure'
+retries = 10
 processes = ['app']
 
 [[vm]]
