--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "mocha -r tsx test/*.test.ts  --exit --timeout 15000",
     "test:repeat": "for i in {1..10}; do echo \"=== Run $i ===\"; mocha -r tsx test/**.test.ts --exit --timeout 15000; done",
     "test:mockapi": "mocha -r tsx test/api.mock.ts --exit --timeout 15000",
-    "tt": "tsx --experimental-sqlite src/test.ts"
+    "tt": "tsx src/test.ts"
   },
   "author": "YASSINE ELOUAFI <yelouafi@gmail.com>",
   "license": "UNLICENSED",
@@ -20,7 +20,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "express-basic-auth": "^1.2.1"
+    "express-basic-auth": "^1.2.1",
+    "firebase-admin": "^13.0.2",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.5.9",
